Corrected spacing between <p>'s in album and image captions

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -19,3 +19,8 @@
 		display: none !important;
 	}
 }
+
+/* In captions, add a margin to every <p> except the first */
+.caption > p:nth-of-type(n + 2) {
+	margin-top: 0.7em;
+}
